[workspace]
members = [
  "node",
  "node/cli",
  "emulated-test/networks/westend",
  "emulated-test/chains/frequency-westend",
  "emulated-test*",
  "emulated-test/test/frequency-westend",
  "node/service",
  "pallets/*",
  "runtime/*",
  "common/helpers",
]
resolver = "2"

[patch.crates-io]
cid = { git="https://github.com/multiformats/rust-cid", tag ="v0.10.1" }

[workspace.dependencies]
log = { version = "0.4.17", default-features = false }
env_logger = "0.11.7"
twox-hash = { version = "1.6.3", default-features = false, features = [
  "digest_0_10",
] }
thiserror = "2.0.12"
apache-avro = { version = "0.17.0", default-features = false }
rand = "0.9.0"
parking_lot = "0.12.1"

# substrate wasm
parity-scale-codec = { version = "3.6.12", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = [
  "derive",
] }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
chrono = { version = "0.4.24" }
pretty_assertions = { version = "1.3.0" }
smallvec = "1.11.0"
numtoa = "0.2.4"
enumflags2 = "0.7.7"
docify = "0.2.8"
impl-trait-for-tuples = "0.2.2"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
serial_test = { version = "2.0.0", default-features = false }
base64-url = { version =  "3.0.0", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
libsecp256k1 = { version = "0.7", default-features = false }

# substrate pallets
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }

# Bridging Pallets
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }

# polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }

# cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }

cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-pallet-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }

# xcm
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
staging-xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
staging-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }

cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }


# xcm-test emulator
xcm-emulator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
westend-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }

emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
asset-hub-westend-emulated-chain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
westend-emulated-chain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
asset-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }

# client
derive_more = "0.99.17"
futures = "0.3.25"
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
impl-serde = { version = "0.4.0", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false }
oorandom = "11.1.3"
phf = { version = "0.11", default-features = false, features = ["macros"] }
rayon = "1.5.3"
tokio = { version = "1.25.0", default-features = false }
unicode-normalization = { version = "0.1.22", default-features = false }
clap = { version = "4.2.5", features = ["derive"] }
static_assertions = { version = "1.1.0", default-features = false }

sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
sp-wasm-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
substrate-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }

# Lints: https://doc.rust-lang.org/rustc/lints/index.html
# Lint Levels: https://doc.rust-lang.org/rustc/lints/levels.html
# Clippy Lints: https://rust-lang.github.io/rust-clippy/master/index.html
[workspace.lints.rust]
nonstandard-style = "deny"

[workspace.lints.clippy]
# We just deny everything so that we can then build up from there
correctness = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# These should stay
wildcard_dependencies = "deny"
from_over_into = "allow"
type_complexity = "allow"
identity_op = "allow"
derivable_impls = "allow"
assign_op_pattern = "allow"
too_many_arguments = "allow"
new_without_default = "allow"
get_first = "allow"
len_zero = "allow"
large_enum_variant = "allow"
empty_line_after_outer_attr = "allow"
enum_variant_names = "allow"

[profile.release]
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.production]
inherits = "release"

# Faster build for bench-dev
[profile.bench-dev]
inherits = "release"
strip = false
codegen-units = 16
lto = false
