[workspace]
members = [
  "chains/frequency-westend",
  "chains/relay/paseo",
  "networks/westend",
  "networks/paseo",
  "test/frequency-westend"
]
resolver = "2"

[workspace.lints.rust]
nonstandard-style = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

wildcard_dependencies = "deny"
from_over_into = "allow"
type_complexity = "allow"
identity_op = "allow"
derivable_impls = "allow"
assign_op_pattern = "allow"
too_many_arguments = "allow"
new_without_default = "allow"
get_first = "allow"
len_zero = "allow"
large_enum_variant = "allow"
empty_line_after_outer_attr = "allow"
enum_variant_names = "allow"

[workspace.dependencies]
log = { version = "0.4.17", default-features = false }
env_logger = "0.11.7"
parity-scale-codec = { version = "3.6.12", default-features = false }
xcm-emulator = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }

emulated-integration-tests-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }
frequency-runtime = { path = "../runtime/frequency", features = [
    "frequency-westend",
    "frequency-bridging",
    "frequency-local",
    "frequency-lint-check",
] }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
staging-xcm = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }

asset-hub-westend-emulated-chain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }
frequency-emulated-chain = { path = "./chains/frequency-westend" }
westend-emulated-chain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }

asset-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7" }
westend-system-emulated-network = { path = "../../networks/westend" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
staging-xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2503-7", default-features = false }


authority-discovery-primitives = { version = "36.0.0", default-features = false, package = "sp-authority-discovery" }
babe-primitives = { version = "0.42.1", default-features = false, package = "sp-consensus-babe" }
beefy-primitives = { version = "24.1.0", default-features = false, package = "sp-consensus-beefy" }
grandpa = { version = "0.34.0", package = "sc-consensus-grandpa" }
pallet-staking = { version = "40.1.1", default-features = false }

paseo-runtime-common = { version = "19.1.0", default-features = false }
paseo-runtime = { git = "https://github.com/paseo-network/runtimes", package = "paseo-runtime", tag = "1.5.1-relay" }
paseo-runtime-constants = { git = "https://github.com/paseo-network/runtimes", tag = "1.5.1-relay", package = "paseo-runtime-constants", default-features = false }






