[package]
authors = ["Frequency"]
build = "build.rs"
description = "Substrate node for Frequency"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "frequency"
repository = "https://github.com/frequency-chain/frequency/"
version = "1.13.0-rc4+polkadot1.10.0"

[[bin]]
name = "frequency"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# Frequency Runtime
frequency-cli = { path = "cli" }
frequency-service = { path = "service" }

[features]
std = []
default = []
runtime-benchmarks = ["frequency-cli/runtime-benchmarks"]
frequency = ["frequency-service/frequency", "frequency-cli/frequency"]
frequency-no-relay = [
  "frequency-service/frequency-no-relay",
  "frequency-cli/frequency-no-relay",
]
frequency-local = [
  "frequency-service/frequency-local",
  "frequency-cli/frequency-local",
]
frequency-testnet = [
  "frequency-service/frequency-testnet",
  "frequency-cli/frequency-testnet",
]
frequency-lint-check = [
  "frequency-service/frequency-lint-check",
  "frequency-cli/frequency-lint-check",
]
