[package]
authors = ["Frequency"]
build = "build.rs"
description = "Substrate node for Frequency"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "frequency"
repository = "https://github.com/frequency-chain/frequency/"
version = "0.0.0"

[[bin]]
name = "frequency"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# Frequency Runtime
frequency-cli = { path = "cli" }
frequency-service = { path = "service" }

# Frontier
fc-api = { workspace = true }
fc-cli = { workspace = true }
fc-consensus = { workspace = true }
fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true, features = ["aura"] }
fc-rpc-core = { workspace = true }
fc-storage = { workspace = true }
# fp-account = { git = "https://github.com/polkadot-evm/frontier", branch = "stable2503", default-features = false }
fp-dynamic-fee = { workspace = true, features = ["default"] }
fp-evm = { workspace = true, features = ["default"] }
fp-rpc = { workspace = true, features = ["default"] }
# frontier-template-runtime = { workspace = true, features = ["std"] }

[features]
std = []
default = []
runtime-benchmarks = ["frequency-cli/runtime-benchmarks"]
frequency = ["frequency-service/frequency", "frequency-cli/frequency"]
frequency-no-relay = [
  "frequency-service/frequency-no-relay",
  "frequency-cli/frequency-no-relay",
]
frequency-local = [
  "frequency-service/frequency-local",
  "frequency-cli/frequency-local",
]
frequency-testnet = [
  "frequency-service/frequency-testnet",
  "frequency-cli/frequency-testnet",
]
frequency-lint-check = [
  "frequency-service/frequency-lint-check",
  "frequency-cli/frequency-lint-check",
]

[lints]
workspace = true
