[package]
authors = ["Frequency"]
description = "Pallet for creating MSA"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "xcm-simulator-frequency"
publish = false
repository = "https://github.com/libertyDSNP/frequency/"
version = "0.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

# XCM
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.36" }

# Polkadot
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }

# Cumulus
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }

common-runtime = { path = "../runtime/common" }
common-primitives = { default-features = false, path = "../common/primitives" }

# Runtimes
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.36" }
statemine-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.36" }
frequency-runtime = { path = "../runtime/frequency" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"pallet-xcm/std",
	"common-primitives/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
    "polkadot-runtime-parachains/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-io/std",
    "xcm-executor/std",
]
frequency-no-relay = ["common-runtime/frequency-no-relay"]