[package]
authors = ["Frequency"]
description = "A package that defines common helper modules used in Frequency"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "common-helpers"
publish = false
repository = "https://github.com/LibertyDSNP/frequency/"
version = "1.9.0+polkadot1.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
apache-avro = { workspace = true, features = ["snappy"] }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
sp-runtime = { workspace = true }
sp-api = { workspace = true }
sp-io = { workspace = true }
common-primitives = { path = "../primitives", default-features = false }

[features]
default = ['std']
std = ['sp-runtime/std', 'sp-api/std', 'sp-io/std', 'common-primitives/std']
