[package]
authors = ["Frequency"]
description = "A package that defines common helper modules used in Frequency"
edition = "2021"
homepage = "https://frequency.xyz"
license = "Apache-2.0"
name = "common-helpers"
publish = false
repository = "https://github.com/frequency-chain/frequency/"
version = "1.17.8+polkadotstable2506-2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
apache-avro = { workspace = true, features = ["snappy"] }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["client-core", "server", "macros"] }
sp-api = { workspace = true }

[features]
default = ['std']
std = ['sp-api/std']

[lints]
workspace = true
